# MicroAPI

./: .editorconfig  .gitignore  README.md  microapi.code-workspace
.github/: FUNDING.yml
backend/: .pre-commit-config.yaml  pyproject.toml  ruff.vscode.toml
backend/microapi/examples/first/: index.html  server.py  websocket-button.js
